--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,19 +59,16 @@
         app:tint="@color/white"
         />
 
-    <TextView
-        android:layout_width="250dp"
-        android:layout_height="75dp"
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="40dp"
 
         android:gravity="center"
 
-        android:text="NOTEKEEPER"
-        android:textColor="@color/white"
-        android:textAlignment="gravity"
-        android:textSize="20dp"
-        android:textStyle="bold"
+        android:src="@drawable/notekeeper"
 
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginLeft="40dp"
 
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
