--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -147,6 +147,8 @@
 
             android:layout_marginTop="10dp">
 
+
+
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
@@ -170,6 +172,27 @@
                     android:textSize="13dp"
                     android:text="Text de la nota, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
                     />
+
+                <ImageButton
+
+
+
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+
+                    android:layout_marginLeft="268dp"
+
+                    android:background="@color/transparent"
+
+                    android:src="@drawable/baseline_more_horiz_24"
+
+
+                    app:tint="@color/black" />
+
+
             </androidx.cardview.widget.CardView>
 
         </LinearLayout>
