--- a/app/src/main/res/layout/note_share.xml
+++ b/app/src/main/res/layout/note_share.xml
@@ -42,25 +42,6 @@
         app:tint="@color/white"
         />
 
-    <ImageButton
-        android:id="@+id/bin"
-
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-
-        android:src="@drawable/baseline_delete_24"
-
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-
-        android:background="@color/transparent"
-
-        app:tint="@color/white"
-        />
-
     <ImageView
         android:layout_width="200dp"
         android:layout_height="40dp"
@@ -166,19 +147,24 @@
                     />
 
                 <TextView
-                    android:layout_width="match_parent"
+                    android:layout_width="175dp"
                     android:layout_height="65dp"
-                    android:layout_marginTop="25dp"
                     android:layout_marginLeft="10dp"
+                    android:layout_marginTop="25dp"
                     android:layout_marginRight="20dp"
-                    android:textSize="13dp"
                     android:text="Text de la nota, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-                    />
+                    android:textSize="13dp" />
+
+                <TextView
+                    android:layout_width="175dp"
+                    android:layout_height="25dp"
+                    android:layout_marginLeft="190dp"
+                    android:layout_marginTop="75dp"
+                    android:layout_marginRight="20dp"
+                    android:text="Desde: Recipient"
+                    android:textSize="13dp" />
 
                 <ImageButton
-
-
-
                     android:layout_width="32dp"
                     android:layout_height="32dp"
 
