--- a/app/src/main/res/layout/activity_iniciar_sesion.xml
+++ b/app/src/main/res/layout/activity_iniciar_sesion.xml
@@ -98,4 +98,24 @@
 
     </androidx.cardview.widget.CardView>
 
+
+    <ImageButton
+
+        android:id="@+id/papelera"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+
+        android:src="@drawable/baseline_delete_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+
+        android:background="@color/background_app"
+
+        app:tint="@color/white"
+        />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
