--- a/app/src/main/res/layout/activity_agenda.xml
+++ b/app/src/main/res/layout/activity_agenda.xml
@@ -10,54 +10,39 @@
 
     <ImageButton
         android:id="@+id/menu_button"
-
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:src="@drawable/baseline_menu_24"
-
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-
-        tools:layout_marginTop="16dp"
-        tools:layout_marginLeft="16dp"
-
-        android:background="@color/background_app"
-        app:tint="@color/white"
-        />
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="16dp"
+        android:background="@color/transparent"
+        app:tint="@color/white" />
 
     <ImageButton
+        android:id="@+id/create_note"
         android:layout_width="32dp"
         android:layout_height="32dp"
-
         android:src="@drawable/baseline_add_24"
-
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-
-        tools:layout_marginRight="16dp"
-        tools:layout_marginTop="16dp"
-
-        android:background="@color/background_app"
-        app:tint="@color/white"
-        />
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="16dp"
+        android:background="@color/transparent"
+        app:tint="@color/white" />
 
     <ImageButton
-
-        android:id="@+id/papelera"
+        android:id="@+id/bin"
         android:layout_width="32dp"
         android:layout_height="32dp"
-
         android:src="@drawable/baseline_delete_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-
-        android:background="@color/background_app"
-
-        app:tint="@color/white"
-        />
+        android:background="@color/transparent"
+        app:tint="@color/white" />
 
     <TextView
         android:id="@+id/textAgenda"
@@ -65,24 +50,108 @@
         android:layout_height="wrap_content"
         android:text="AGENDA"
         android:textColor="@color/white"
-
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@+id/menu_button"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="30dp"
-        />
+        android:layout_marginTop="30dp" />
 
     <CalendarView
         android:id="@+id/calendarView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="350dp"
+        android:layout_height="400dp"
         android:background="@color/white"
         app:layout_constraintTop_toBottomOf="@+id/textAgenda"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="20dp"
-        />
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp" />
+
+    <!-- Menú lateral -->
+    <androidx.cardview.widget.CardView
+        android:id="@+id/menu"
+        android:layout_width="-300dp"
+        android:layout_height="match_parent"
+        android:backgroundTint="@color/background_component"
+        app:layout_constraintLeft_toLeftOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <ImageButton
+                android:id="@+id/menu_close_button"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:src="@drawable/baseline_menu_24"
+                android:layout_marginTop="16dp"
+                android:layout_marginLeft="16dp"
+                android:background="@color/transparent"
+                app:tint="@color/white" />
+
+            <ImageView
+                android:layout_width="240dp"
+                android:layout_height="120dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="16dp"
+                android:background="@color/transparent"
+                android:src="@drawable/notekeeper" />
+
+            <Button
+                android:id="@+id/schedule"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:text="· Agenda"
+                android:textSize="18dp"
+                android:textColor="@color/white"
+                android:textAlignment="textStart"
+                android:background="@color/transparent" />
+
+            <Button
+                android:id="@+id/share"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:text="· Compartir"
+                android:textSize="18dp"
+                android:textColor="@color/white"
+                android:textAlignment="textStart"
+                android:background="@color/transparent" />
+
+            <Button
+                android:id="@+id/profile"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:text="· Perfil"
+                android:textSize="18dp"
+                android:textColor="@color/white"
+                android:textAlignment="textStart"
+                android:background="@color/transparent" />
+
+            <Button
+                android:id="@+id/configuration"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:text="· Configuración"
+                android:textSize="18dp"
+                android:textColor="@color/white"
+                android:textAlignment="textStart"
+                android:background="@color/transparent" />
+
+            <!-- Añade este botón para volver a Main -->
+            <Button
+                android:id="@+id/btn_home"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:text="· Inicio"
+                android:textSize="18dp"
+                android:textColor="@color/white"
+                android:textAlignment="textStart"
+                android:background="@color/transparent" />
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
