--- a/app/src/main/res/layout/activity_compartir.xml
+++ b/app/src/main/res/layout/activity_compartir.xml
@@ -10,56 +10,39 @@
 
     <ImageButton
         android:id="@+id/menu_button"
-
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:src="@drawable/baseline_menu_24"
-
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-
-        tools:layout_marginTop="16dp"
-        tools:layout_marginLeft="16dp"
-
-        android:background="@color/background_app"
-        app:tint="@color/white"
-        />
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="16dp"
+        android:background="@color/transparent"
+        app:tint="@color/white" />
 
     <ImageButton
-        android:id="@+id/crear_nota"
+        android:id="@+id/create_note"
         android:layout_width="32dp"
         android:layout_height="32dp"
-
         android:src="@drawable/baseline_add_24"
-
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-
-        tools:layout_marginRight="16dp"
-        tools:layout_marginTop="16dp"
-
-        android:background="@color/background_app"
-        app:tint="@color/white"
-        />
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="16dp"
+        android:background="@color/transparent"
+        app:tint="@color/white" />
 
     <ImageButton
-
-        android:id="@+id/papelera"
+        android:id="@+id/bin"
         android:layout_width="32dp"
         android:layout_height="32dp"
-
         android:src="@drawable/baseline_delete_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-
-        android:background="@color/background_app"
-
-        app:tint="@color/white"
-        />
-
+        android:background="@color/transparent"
+        app:tint="@color/white" />
 
     <TextView
         android:id="@+id/msg_warning"
@@ -73,8 +56,7 @@
         android:layout_marginTop="30dp"
         android:text="Has de registarte abans de poder compartir notes"
         android:layout_marginStart="40dp"
-        android:layout_marginEnd="30dp">
-    </TextView>
+        android:layout_marginEnd="30dp" />
 
     <Button
         android:id="@+id/btn_login"
@@ -85,9 +67,7 @@
         app:layout_constraintStart_toStartOf="parent"
         android:text="Log in"
         android:backgroundTint="@color/background_button"
-        android:textColor="@color/white">
-
-    </Button>
+        android:textColor="@color/white" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -98,12 +78,89 @@
         app:layout_constraintStart_toStartOf="parent"
         android:text="Create new account"
         android:textColor="@color/white"
-        android:layout_marginTop="10dp"
-        >
+        android:layout_marginTop="10dp" />
 
-    </TextView>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/menu"
+        android:layout_width="-300dp"
+        android:layout_height="match_parent"
+        android:backgroundTint="@color/background_component"
+        app:layout_constraintLeft_toLeftOf="parent">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
+            <ImageButton
+                android:id="@+id/menu_close_button"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:src="@drawable/baseline_menu_24"
+                android:layout_marginTop="16dp"
+                android:layout_marginLeft="16dp"
+                android:background="@color/transparent"
+                app:tint="@color/white" />
 
+            <ImageView
+                android:layout_width="240dp"
+                android:layout_height="120dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="16dp"
+                android:background="@color/transparent"
+                android:src="@drawable/notekeeper" />
+
+            <Button
+                android:id="@+id/schedule"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:text="· Agenda"
+                android:textSize="18dp"
+                android:textColor="@color/white"
+                android:textAlignment="textStart"
+                android:background="@color/transparent" />
+
+            <Button
+                android:id="@+id/share"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:text="· Compartir"
+                android:textSize="18dp"
+                android:textColor="@color/white"
+                android:textAlignment="textStart"
+                android:background="@color/transparent" />
+
+            <Button
+                android:id="@+id/profile"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:text="· Perfil"
+                android:textSize="18dp"
+                android:textColor="@color/white"
+                android:textAlignment="textStart"
+                android:background="@color/transparent" />
+
+            <Button
+                android:id="@+id/configuration"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:text="· Configuración"
+                android:textSize="18dp"
+                android:textColor="@color/white"
+                android:textAlignment="textStart"
+                android:background="@color/transparent" />
+
+            <Button
+                android:id="@+id/btn_home"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:text="· Inicio"
+                android:textSize="18dp"
+                android:textColor="@color/white"
+                android:textAlignment="textStart"
+                android:background="@color/transparent" />
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
