--- a/app/src/main/res/layout/note_editor.xml
+++ b/app/src/main/res/layout/note_editor.xml
@@ -131,11 +131,10 @@
             />
 
         <TextView
+            android:id="@+id/eliminar"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-
             android:gravity="center"
-
             android:text="Suprimir Nota"
             android:textColor="@color/red"
             android:textAlignment="gravity"
