Areglat les pantalles

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_app"
-    tools:context=".iniciar_sesion">
+    tools:context=".ChangePassword">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -15,10 +15,11 @@
         android:layout_marginBottom="20dp"
         android:id="@+id/imageLogo"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/sign_in"
+        app:layout_constraintBottom_toTopOf="@+id/card_inicar_session"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintVertical_chainStyle="packed"/>
+
 
     <androidx.cardview.widget.CardView
         android:layout_width="0dp"
@@ -26,12 +27,14 @@
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
         app:cardCornerRadius="20dp"
-        android:id="@+id/sign_in"
+        app:cardElevation="8dp"
+        android:id="@+id/card_inicar_session"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageLogo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintVertical_bias="0.3">
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -41,13 +44,15 @@
             android:padding="32dp"
             android:background="@color/background_component">
 
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:text="Email"
+                android:text="Contraseña antigua"
+                android:textSize="16sp"
                 android:textColor="@color/white"
-                android:textSize="16sp" />
+                android:layout_marginBottom="8dp"/>
+
 
             <EditText
                 android:layout_width="match_parent"
@@ -57,18 +62,20 @@
                 android:layout_marginBottom="24dp"
                 android:paddingStart="16dp"
                 android:paddingEnd="16dp"
-                android:hint="Enter email"
+                android:hint="Enter old password"
                 android:textSize="16sp"
                 android:textColor="@color/black"
                 android:inputType="textEmailAddress"/>
 
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Password"
+                android:text="Nova contraseña"
                 android:textSize="16sp"
                 android:textColor="@color/white"
                 android:layout_marginBottom="8dp"/>
+
 
             <EditText
                 android:layout_width="match_parent"
@@ -79,14 +86,15 @@
                 android:paddingStart="16dp"
                 android:paddingEnd="16dp"
                 android:inputType="textPassword"
-                android:hint="Enter password"
+                android:hint="Enter new password"
                 android:textSize="16sp"
                 android:textColor="@color/black"/>
+
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="52dp"
-                android:text="Log In"
+                android:text="Change password"
                 android:id="@+id/loginButton"
                 android:textSize="18sp"
                 android:textStyle="bold"
@@ -94,28 +102,8 @@
                 android:textColor="@color/white"
                 app:cornerRadius="12dp"/>
 
+
         </LinearLayout>
-
     </androidx.cardview.widget.CardView>
-
-
-    <ImageButton
-
-        android:id="@+id/papelera"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-
-        android:src="@drawable/baseline_delete_24"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-
-        android:background="@color/background_app"
-
-        app:tint="@color/white"
-        />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
