--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_app"
-    tools:context=".edit_contrasenya">
+    tools:context=".LogIn">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -15,10 +15,11 @@
         android:layout_marginBottom="20dp"
         android:id="@+id/imageLogo"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/card_inicar_session"
+        app:layout_constraintBottom_toTopOf="@+id/sign_in"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintVertical_chainStyle="packed"/>
+
 
     <androidx.cardview.widget.CardView
         android:layout_width="0dp"
@@ -26,13 +27,13 @@
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
         app:cardCornerRadius="20dp"
-        app:cardElevation="8dp"
-        android:id="@+id/card_inicar_session"
+        android:id="@+id/sign_in"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageLogo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintVertical_bias="0.3">
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -42,13 +43,15 @@
             android:padding="32dp"
             android:background="@color/background_component">
 
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Contraseña antigua"
-                android:textSize="16sp"
+                android:layout_marginBottom="8dp"
+                android:text="Email"
                 android:textColor="@color/white"
-                android:layout_marginBottom="8dp"/>
+                android:textSize="16sp" />
+
 
             <EditText
                 android:layout_width="match_parent"
@@ -58,18 +61,20 @@
                 android:layout_marginBottom="24dp"
                 android:paddingStart="16dp"
                 android:paddingEnd="16dp"
-                android:hint="Enter old password"
+                android:hint="Enter email"
                 android:textSize="16sp"
                 android:textColor="@color/black"
                 android:inputType="textEmailAddress"/>
 
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Nova contraseña"
+                android:text="Password"
                 android:textSize="16sp"
                 android:textColor="@color/white"
                 android:layout_marginBottom="8dp"/>
+
 
             <EditText
                 android:layout_width="match_parent"
@@ -80,14 +85,15 @@
                 android:paddingStart="16dp"
                 android:paddingEnd="16dp"
                 android:inputType="textPassword"
-                android:hint="Enter new password"
+                android:hint="Enter password"
                 android:textSize="16sp"
                 android:textColor="@color/black"/>
+
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="52dp"
-                android:text="Change password"
+                android:text="Log In"
                 android:id="@+id/loginButton"
                 android:textSize="18sp"
                 android:textStyle="bold"
@@ -96,7 +102,6 @@
                 app:cornerRadius="12dp"/>
 
         </LinearLayout>
-
     </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
