--- a/app/src/main/res/layout/activity_note_agenda.xml
+++ b/app/src/main/res/layout/activity_note_agenda.xml
@@ -6,39 +6,41 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_app"
-    tools:context=".nota_compartir">
+    tools:context=".NoteAgenda">
 
     <ImageButton
         android:id="@+id/btn_save"
         android:layout_width="32dp"
         android:layout_height="32dp"
-        android:src="@drawable/save_exit"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:background="@color/background_app"
-        app:tint="@color/white"
+        android:src="@drawable/save_exit"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp" />
+        app:tint="@color/white" />
 
 
     <ImageButton
         android:id="@+id/btn_close"
         android:layout_width="32dp"
         android:layout_height="32dp"
-        android:src="@drawable/canceler"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp"
         android:background="@color/background_app"
-        app:tint="@color/white"
+        android:src="@drawable/close"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="16dp" />
+        app:tint="@color/white" />
+
 
     <androidx.cardview.widget.CardView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginTop="72dp"
+        android:layout_marginBottom="8dp"
         app:cardCornerRadius="16dp"
         app:cardElevation="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -46,18 +48,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btn_save">
 
+
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="24dp">
+
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+
                 <TextView
-                    android:id="@+id/txt_notes"
+                    android:id="@+id/notes_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Notes:"
@@ -65,23 +70,26 @@
                     android:textColor="@color/black"
                     android:layout_marginBottom="8dp" />
 
+
                 <EditText
                     android:id="@+id/notes_edittext"
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
+                    android:layout_height="120dp"
                     android:padding="12dp"
                     android:hint="Escriu la teva nota aquí..."
                     android:textSize="14sp"
                     android:textColor="@color/black"
                     android:gravity="top"
-                    android:layout_marginBottom="24dp" />
+                    android:layout_marginBottom="8dp" />
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:gravity="center_vertical"
-                    android:layout_marginBottom="24dp">
+                    android:layout_marginBottom="8dp">
+
 
                     <TextView
                         android:id="@+id/category_label"
@@ -91,10 +99,12 @@
                         android:textSize="16sp"
                         android:textColor="@color/black" />
 
+
                     <View
                         android:layout_width="0dp"
                         android:layout_height="0dp"
                         android:layout_weight="1" />
+
 
                     <Spinner
                         android:id="@+id/category_spinner"
@@ -105,68 +115,14 @@
                         android:paddingEnd="12dp" />
                 </LinearLayout>
 
-                <TextView
-                    android:id="@+id/asunto_label"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Asunto:"
-                    android:textSize="16sp"
-                    android:textColor="@color/black"
-                    android:layout_marginBottom="8dp" />
-
-                <EditText
-                    android:id="@+id/asunto_edittext"
-                    android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:padding="12dp"
-                    android:hint="Escriu l'asunto aquí..."
-                    android:textSize="14sp"
-                    android:textColor="@color/black"
-                    android:gravity="top"
-                    android:maxLines="4"
-                    android:scrollbars="vertical"
-                    android:layout_marginBottom="24dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:gravity="center_vertical"
-                    android:layout_marginBottom="24dp">
+                    >
 
-                    <TextView
-                        android:id="@+id/destinatari_label"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Destinatari:"
-                        android:textSize="16sp"
-                        android:textColor="@color/black" />
-
-                    <View
-                        android:layout_width="0dp"
-                        android:layout_height="0dp"
-                        android:layout_weight="1" />
-
-                    <EditText
-                        android:id="@+id/destinatari_edittext"
-                        android:layout_width="180dp"
-                        android:layout_height="35dp"
-                        android:padding="8dp"
-                        android:hint="XXXXXXXXX"
-                        android:textSize="14sp"
-                        android:textColor="@color/black"
-                        android:background="@color/white"
-                        android:inputType="number"
-                        android:maxLength="9"
-                        android:gravity="center_vertical" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:gravity="center_vertical"
-                    android:layout_marginBottom="24dp">
 
                     <TextView
                         android:id="@+id/data_label"
@@ -176,10 +132,12 @@
                         android:textSize="16sp"
                         android:textColor="@color/black" />
 
+
                     <View
                         android:layout_width="0dp"
                         android:layout_height="0dp"
                         android:layout_weight="1" />
+
 
                     <TextView
                         android:id="@+id/selected_data_text"
@@ -188,15 +146,58 @@
                         android:padding="8dp"
                         android:hint="DD/MM/AAAA"
                         android:textSize="14sp"
+                        android:textColor="@color/black"
+                        android:background="@color/white"
                         android:gravity="center_vertical" />
                 </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:orientation="vertical">
+
+
+                    <TextView
+                        android:id="@+id/hora_label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:text="Hora:"
+                        android:textColor="@color/black"
+                        android:textSize="16sp" />
+
+
+                    <TimePicker
+                        android:id="@+id/time_picker"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:headerBackground="@color/white"
+                        android:numbersSelectorColor="@color/background_button"
+                        android:numbersTextColor="@color/black"
+                        android:timePickerMode="spinner" />
+
+
+                    <TextView
+                        android:id="@+id/selected_hora_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="12dp"
+                        android:text="Seleccionat: 9:41 AM"
+                        android:textColor="@color/black"
+                        android:textSize="14sp" />
+                </LinearLayout>
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:gravity="center_vertical"
-                    android:layout_marginBottom="10dp">
+                    android:layout_marginBottom="8dp">
+
 
                     <TextView
                         android:id="@+id/recurrence_label"
@@ -206,10 +207,12 @@
                         android:textSize="16sp"
                         android:textColor="@color/black" />
 
+
                     <View
                         android:layout_width="0dp"
                         android:layout_height="0dp"
                         android:layout_weight="1" />
+
 
                     <Spinner
                         android:id="@+id/recurrence_spinner"
@@ -218,6 +221,7 @@
                         android:paddingStart="12dp"
                         android:paddingEnd="12dp" />
                 </LinearLayout>
+
 
                 <Button
                     android:id="@+id/save_button"
@@ -230,9 +234,13 @@
                     android:textColor="@color/white"
                     app:cornerRadius="12dp" />
 
+
             </LinearLayout>
         </ScrollView>
 
+
     </androidx.cardview.widget.CardView>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
