--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,135 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_app"
-    tools:context=".perfil">
+    tools:context=".Profile">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/menu"
-        android:layout_width="-300dp"
-        android:layout_height="match_parent"
 
-        android:backgroundTint="@color/background_component"
 
-        app:layout_constraintLeft_toLeftOf="parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <ImageButton
-                android:id="@+id/menu_close_button"
-
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:src="@drawable/baseline_menu_24"
-
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-
-                android:layout_marginTop="16dp"
-                android:layout_marginLeft="16dp"
-
-                android:background="@color/transparent"
-                app:tint="@color/white"
-                />
-
-            <ImageView
-                android:layout_width="240dp"
-                android:layout_height="120dp"
-                android:layout_marginLeft="20dp"
-
-                android:layout_marginTop="16dp"
-                android:background="@color/transparent"
-
-                android:src="@drawable/notekeeper"
-                app:layout_constraintLeft_toLeftOf="parent"
-
-                app:layout_constraintTop_toTopOf="parent"
-                />
-
-            <Button
-                android:id="@+id/schedule"
-
-                android:layout_width="match_parent"
-
-                android:textAlignment="textStart"
-
-                android:layout_height="45dp"
-
-                android:text="· Agenda"
-                android:textSize="18dp"
-
-                android:textColor="@color/white"
-
-                android:background="@color/transparent"
-                />
-
-            <Button
-                android:id="@+id/share"
-
-                android:layout_width="match_parent"
-
-                android:textAlignment="textStart"
-
-                android:layout_height="45dp"
-
-                android:text="· Compartir"
-                android:textSize="18dp"
-
-                android:textColor="@color/white"
-
-                android:background="@color/transparent"
-                />
-
-            <Button
-                android:id="@+id/profile"
-
-                android:layout_width="match_parent"
-
-                android:textAlignment="textStart"
-
-                android:layout_height="45dp"
-
-                android:text="· Perfil"
-                android:textSize="18dp"
-
-                android:textColor="@color/white"
-
-                android:background="@color/transparent"
-                />
-
-            <Button
-                android:id="@+id/configuration"
-
-                android:layout_width="match_parent"
-
-                android:textAlignment="textStart"
-
-                android:layout_height="45dp"
-
-                android:text="· Configuració"
-                android:textSize="18dp"
-
-                android:textColor="@color/white"
-
-                android:background="@color/transparent"
-                />
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
-
-    <ImageButton
-        android:id="@+id/menu_button"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:src="@drawable/baseline_menu_24"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:background="@color/background_app"
-        app:tint="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/user_icon"
@@ -144,7 +19,9 @@
         android:layout_marginTop="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/menu_button" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
 
     <TextView
         android:id="@+id/user_name"
@@ -159,6 +36,7 @@
         app:layout_constraintTop_toBottomOf="@+id/user_icon"
         android:layout_marginTop="16dp" />
 
+
     <TextView
         android:id="@+id/user_email"
         android:layout_width="wrap_content"
@@ -171,8 +49,10 @@
         app:layout_constraintTop_toBottomOf="@+id/user_name"
         android:layout_marginTop="4dp" />
 
+
     <androidx.cardview.widget.CardView
         android:id="@+id/profile_card"
+
 
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -185,11 +65,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/user_email">
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="24dp">
+
 
             <LinearLayout
                 android:id="@+id/editar_perfil"
@@ -199,9 +81,11 @@
                 android:gravity="center_vertical"
                 android:layout_marginBottom="8dp">
 
+
                 <View
                     android:layout_width="24dp"
                     android:layout_height="24dp" />
+
 
                 <TextView
                     android:layout_width="0dp"
@@ -213,7 +97,10 @@
                     android:layout_marginStart="16dp" />
 
 
+
+
             </LinearLayout>
+
 
             <LinearLayout
                 android:id="@+id/cambiar_password"
@@ -223,10 +110,12 @@
                 android:gravity="center_vertical"
                 android:layout_marginBottom="8dp">
 
+
                 <View
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     />
+
 
                 <TextView
                     android:layout_width="0dp"
@@ -237,7 +126,9 @@
                     android:textColor="@color/black"
                     android:layout_marginStart="16dp" />
 
+
             </LinearLayout>
+
 
             <LinearLayout
                 android:id="@+id/notificaciones"
@@ -247,10 +138,12 @@
                 android:gravity="center_vertical"
                 android:layout_marginBottom="8dp">
 
+
                 <View
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:tint="@color/black" />
+
 
                 <TextView
                     android:layout_width="0dp"
@@ -261,11 +154,13 @@
                     android:textColor="@color/black"
                     android:layout_marginStart="16dp" />
 
+
                 <androidx.appcompat.widget.SwitchCompat
                     android:id="@+id/notificaciones_switch"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             </LinearLayout>
+
 
             <LinearLayout
                 android:id="@+id/cerrar_sesion"
@@ -275,6 +170,7 @@
                 android:gravity="center_vertical"
                 android:background="?attr/selectableItemBackground"
                 android:paddingVertical="12dp">
+
 
                 <View
                     android:layout_width="24dp"
@@ -293,8 +189,10 @@
 
         </LinearLayout>
 
+
     </androidx.cardview.widget.CardView>
 
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
