--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
     android:background="@color/background_app"
-    tools:context=".registro">
+    tools:context=".SignIn">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -21,6 +19,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintVertical_chainStyle="packed"/>
+
 
     <androidx.cardview.widget.CardView
         android:layout_width="0dp"
@@ -36,6 +35,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintVertical_bias="0.3">
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -44,6 +44,7 @@
             android:padding="32dp"
             android:background="@color/background_component">
 
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -51,6 +52,7 @@
                 android:textSize="16sp"
                 android:textColor="@color/white"
                 android:layout_marginBottom="8dp"/>
+
 
             <EditText
                 android:layout_width="match_parent"
@@ -65,6 +67,7 @@
                 android:textColor="@color/black"
                 android:inputType="textEmailAddress"/>
 
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -72,6 +75,7 @@
                 android:textSize="16sp"
                 android:textColor="@color/white"
                 android:layout_marginBottom="8dp"/>
+
 
             <EditText
                 android:layout_width="match_parent"
@@ -86,6 +90,7 @@
                 android:textSize="16sp"
                 android:textColor="@color/black"/>
 
+
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="52dp"
@@ -97,11 +102,13 @@
                 android:textColor="@color/white"
                 app:cornerRadius="12dp"/>
 
+
         </LinearLayout>
+
 
     </androidx.cardview.widget.CardView>
 
-
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
