--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,51 +14,13 @@
         android:layout_height="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         android:background="@color/background_component"
+        app:itemIconTint="@color/white"
+        app:itemTextColor="@color/white"
         app:labelVisibilityMode="labeled"
+        app:itemHorizontalTranslationEnabled="true"
         app:menu="@menu/bottom_navigation_menu"/>
-
-
-    <ImageButton
-        android:id="@+id/menu_button"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:src="@drawable/user"
-        android:backgroundTint="@color/white"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="16dp"
-        android:layout_marginLeft="16dp"
-        app:tint="@color/white"
-        />
-
-    <ImageButton
-        android:id="@+id/create_note"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:src="@drawable/baseline_add_24"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="16dp"
-        android:background="@color/transparent"
-        app:tint="@color/white"
-        />
-
-    <ImageButton
-        android:id="@+id/bin"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:src="@drawable/baseline_delete_24"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:background="@color/transparent"
-        app:tint="@color/white"
-        />
 
     <ImageView
         android:layout_width="200dp"
@@ -179,29 +141,6 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <ImageButton
-                android:id="@+id/menu_close_button"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:src="@drawable/baseline_menu_24"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="16dp"
-                android:layout_marginLeft="16dp"
-                android:background="@color/transparent"
-                app:tint="@color/white"
-                />
-
-            <ImageView
-                android:layout_width="240dp"
-                android:layout_height="120dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="16dp"
-                android:background="@color/transparent"
-                android:src="@drawable/notekeeper"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                />
 
             <Button
                 android:id="@+id/schedule"
