--- a/app/src/main/res/layout/configuration.xml
+++ b/app/src/main/res/layout/configuration.xml
@@ -95,6 +95,7 @@
         </RadioGroup>
 
         <Button
+            android:id="@+id/btn_ajuda"
             android:layout_width="150dp"
             android:layout_height="50dp"
             android:text="Ajuda"
@@ -103,17 +104,34 @@
             android:layout_marginLeft="20dp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <Button
+            android:id="@+id/go_back"
+            android:layout_width="220sp"
+            android:layout_height="50dp"
+            android:text="Guardar i tornar"
+            android:layout_marginLeft="170dp"
+            android:layout_marginTop="80dp"
+            app:layout_constraintTop_toBottomOf="@+id/btn_ajuda"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:backgroundTint="@color/background_button"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
     </LinearLayout>
 
-    <Button
-        android:id="@+id/go_back"
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="Guardar i tornar"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="20dp"
-        android:backgroundTint="@color/background_button"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        android:layout_height="100dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:background="@color/background_component"
+        app:itemIconTint="@color/white"
+        app:itemTextColor="@color/white"
+        app:labelVisibilityMode="labeled"
+        app:itemHorizontalTranslationEnabled="true"
+        app:menu="@menu/bottom_navigation_menu"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
