--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -8,20 +8,6 @@
     android:background="@color/background_app"
     tools:context=".MainActivity">
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNavigationView"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:background="@color/background_component"
-        app:itemIconTint="@color/white"
-        app:itemTextColor="@color/white"
-        app:labelVisibilityMode="labeled"
-        app:itemHorizontalTranslationEnabled="true"
-        app:menu="@menu/bottom_navigation_menu"/>
-
     <ImageView
         android:layout_width="200dp"
         android:layout_height="40dp"
@@ -112,5 +98,7 @@
 
         </LinearLayout>
     </ScrollView>
+
+    <include layout="@layout/bottom_navigation_menu"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
